--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+:root {
+  --yellow-fm: hsl(47, 88%, 63%);
+  --white-fm: hsl(0, 0%, 100%);
+  --gray-fm: hsl(0, 0%, 50%);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +13,7 @@
 body {
   min-height: 100vh;
   font-family: "Figtree", serif, sans-serif;
-  background: hsl(47, 88%, 63%);
+  background: var(--yellow-fm);
   display: flex;
 }
 
@@ -21,12 +27,12 @@ main {
 .card__container {
   max-width: 280px;
   border-radius: 20px;
-  background: hsl(0, 0%, 100%);
+  background: var(--white-fm);
   padding: 15px;
   border: 1px solid;
   box-shadow: 10px 10px;
   transition: .3s;
-  .card__container--img img {
+  .card__img img {
     width: 100%;
     border-radius: 20px;
     height: 100%;
@@ -36,7 +42,7 @@ main {
 .card__date {
   .card__date--title {
     display: inline-flex;
-    background: hsl(47, 88%, 63%);
+    background: var(--yellow-fm);
     border-radius: 5px;
     padding: 5px 10px;
     font-size: 11px;
@@ -56,14 +62,14 @@ main {
     font-weight: 800;
     transition: .3s;
     &:hover {
-      color: hsl(47, 88%, 63%);
+      color: var(--yellow-fm);
       cursor: pointer;
     }
   }
   .card__info--desc {
     margin: 10px 0;
     font-size: 12px;
-    color: hsl(0, 0%, 50%);
+    color: var(--gray-fm);
     line-height: 1.6;
   }
 }
